Изменение цвета шрифта

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,16 @@ body {
 	
 	font-family: 'Roboto', arial, sans-serif;
 	background-color: white;
-    color: #283136;
+    color: #000000;
 	font-weight: 400;
 	font-size: 16px;
     line-height: 24px;
+}
+
+p,
+.text-range,
+.text-order {
+	color: #283136;
 }
 
 
@@ -138,6 +144,7 @@ table td {
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: 400;
+	color: #283136;
 }
 
 .brand-item {
@@ -201,6 +208,13 @@ table td {
 .footer-contacts {
 	font-size: 16px;
 	line-height: 18px;
+	color: #666666;
+}
+
+.footer-info-item {
+	color: #444444;
+	font-size: 16px;
+	line-height: 22px;
 }
 
 .modal-feedback-title {
