--- a/css/outline.css
+++ b/css/outline.css
@@ -65,3 +65,30 @@
 .footer-social {
 	outline: 1px solid red;
 }
+
+.map-image {
+	outline: 1px solid green;
+}
+
+.catalog-columns {
+	outline: 1px solid green;
+}
+
+.filter {
+	outline: 1px solid red;
+}
+
+.catalog-right-column {
+	outline: 1px solid blue;
+}
+
+h3 {
+	outline: 1px solid red;
+}
+ul {
+	outline: 1px solid green;
+}
+
+li {
+	outline: 1px solid purple;
+}
