--- a/css/style.css
+++ b/css/style.css
@@ -322,11 +322,9 @@ body {
 	box-sizing: border-box;
 }
 
-.main-header {
-	
+.main-header {	
 	min-height: 545px; 
-	margin-bottom: 80px;
-		
+	margin-bottom: 80px;		
 }
 
 .container {	
@@ -459,11 +457,13 @@ main {
 }
 
 .map-image {
-	width: 1200px;
-	min-height: 420px;
-	padding: 0;
-	margin: 0 auto;
 	
+	margin-top: 10px;
+}
+
+.map-image-item {
+	width: 100%;
+	height: 100%
 }
 
 .main-footer {
@@ -511,6 +511,10 @@ main {
 	margin: 0; 
 	padding: 0;
 	margin-right: 60px;
+}
+
+.button-show {
+	margin-left: 100px;	
 }
 
 .catalog-right-column {
